柱状图修改

--- a/editBI.html
+++ b/editBI.html
@@ -178,7 +178,7 @@
 										<p>属性</p>
 										<div class="opt-chart-type">
 											<div class="chart-type-val">
-												<span>饼图</span>
+												<span>柱状图</span>
 												<i class="fa fa-caret-down fr"></i>
 											</div>
 											<div class="chart-type-lists">
