--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
     <!--<link rel="stylesheet" href="plugin/layui-v2.1.3/layui/css/layui.css" />-->
-    <!--<link rel="stylesheet" href="plugin/zTree/css/demo.css" />-->
+    <link rel="stylesheet" href="plugin/zTree/css/demo.css" />
     <link rel="stylesheet" href="plugin/zTree/css/zTreeStyle/zTreeStyle.css" />
-    <!--<link rel="stylesheet" href="plugin/basicContext/basicContext.min.css" />-->
-    <!--<link rel="stylesheet" href="plugin/basicContext/default.min.css" />-->
+    <link rel="stylesheet" href="plugin/basicContext/basicContext.min.css" />
+    <link rel="stylesheet" href="plugin/basicContext/default.min.css" />
     <link rel="stylesheet" href="plugin/context/context.standalone.css" />
     <link rel="stylesheet" href="plugin/layer/skin/default/layer.css" />
     <link rel="stylesheet" href="css/form.css" />
@@ -145,7 +145,7 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage" src="html/biTemplet.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
+								<iframe id="iframepage" src="editBI.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
 							</div>
 						</div>
 					</div>
@@ -696,8 +696,8 @@
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="plugin/layer/layer.js"></script>
     <!--<script src="plugin/layui-v2.1.3/layui/layui.js"></script>-->
-    <!--<script src="plugin/basicContext/basicContext.min.js"></script>-->
-    <script src="plugin/context/context.js"></script>
+    <script src="plugin/basicContext/basicContext.min.js"></script>
+    <!--<script src="plugin/context/context.js"></script>-->
     <script src="plugin/zSize/jquery_zsize.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/tree.js"></script>
