--- a/editBI.html
+++ b/editBI.html
@@ -24,7 +24,7 @@
 	    .resize-item{
 					width: 150px;
 					height:150px;
-					border: 1px solid red;
+					/*border: 1px solid red;*/
 					position: absolute;
 					z-index: 10000;
 				}
@@ -90,10 +90,21 @@
 			.content-text>div i{
 				font-style:italic;
 			}
+			/*	按钮	*/
+			.content-button{
+				width: 100%;
+				height: 100%;
+			}
+			.content-button button{
+				width: 100%;
+				height: 100%;
+			}
 			.image-class
 			,.image-class img{
 				width: 100%;
 				height: 100%;
+				overflow: hidden;
+				box-sizing: border-box;
 			}
 
 			.hint,.tooltip{
@@ -125,7 +136,7 @@
 					<!--BI报表编辑模式-->
 					<div class="edit-state">
 						<div class="top-bar clearfix clearX">
-							<img src="images/icon_save.png" alt="" />
+							<img src="images/icon_save.png" alt=""  onclick="operating.save()" />
 							<img src="images/icon_copy.png" alt="" />
 							<img src="images/icon_paste.png" alt="" />
 							<img src="images/icon_move.png" alt="" />
@@ -311,7 +322,7 @@
 								</div>
 								<!--表格 end-->
 								<!--文本 start-->
-								<div class="text-attr-box" style="display: none">
+								<div class="text-attr-box" style="display: none;">
 									<div class="title-box">
 										<h3>文本</h3>
 										<div class="set-text-attr">
@@ -367,9 +378,94 @@
 								<div class="button-attr-box">
 									<div class="title-box">
 										<h3>按钮</h3>
+										<div class="set-button-price-text">
+											<p>设置按钮字体</p>
+											<input type="text" id="buttonText">
+										</div>
+										<div class="set-button-color set-button">
+											<div>按钮颜色</div>
+											<div class="set-text-color">
+												<div class="color-row">
+													<input type="hidden" name="unique-name-2" data-palette='["#DDDDDD","#000000","#D50000","#304FFE","#00B8D4","#69F0AE","#FFFF00"]' value="#DDDDDD">
+												</div>
+											</div>
+										</div>
+										<div class="set-button-size set-button">
+											<div>字体大小</div>
+											<div class="set-text-size sc-color">
+												<select name="">
+													<option selected value="12">12</option>
+													<option value="14">14</option>
+													<option selected value="16">16</option>
+													<option value="20">20</option>
+													<option value="24">24</option>
+													<option value="28">28</option>
+													<option value="32">32</option>
+												</select>
+												<i class="fa fa-caret-down"></i>
+											</div>
+										</div>
+										<div class="set-button-SizeColor set-button">
+											<div>字体颜色</div>
+											<div class="set-text-color">
+												<div class="color-row">
+													<input type="hidden" name="unique-name-3" data-palette='["#000","#ffffff","#D50000","#304FFE","#00B8D4","#69F0AE","#FFFF00"]' value="#000">
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 								<!--按钮 end-->
+								<!--图片 start-->
+								<div class="price-attr-box">
+									<div class="title-box">
+										<h3>图片</h3>
+										<div class="set-price-prop set-index-box">
+											<input type="checkbox"/>
+											<img src="images/xuankuang.png" alt="" />
+											<span>保持宽高比</span>
+										</div>
+										<div class="set-price-border-style set-price">
+											<div>边框样式</div>
+											<div class="set-text-size sc-color">
+												<select name="">
+													<option value="实线">实线</option>
+													<option value="点线">点线</option>
+													<option value="虚线">虚线</option>
+												</select>
+												<i class="fa fa-caret-down"></i>
+											</div>
+										</div>
+										<div class="set-price-color set-price">
+											<div>边框颜色</div>
+											<div class="set-text-color">
+												<div class="color-row">
+													<input type="hidden" name="unique-name-4" data-palette='["#000000","#D50000","#304FFE","#00B8D4","#69F0AE","#FFFF00"]' value="#000000">
+												</div>
+											</div>
+										</div>
+										<div class="set-price-border set-price">
+											<div>边框宽度</div>
+											<div class="set-text-size sc-color">
+												<select name="">
+													<option value="0">0</option>
+													<option value="1">1</option>
+													<option value="2">2</option>
+													<option value="3">3</option>
+													<option value="4">4</option>
+													<option value="5">5</option>
+												</select>
+												<i class="fa fa-caret-down"></i>
+											</div>
+										</div>
+										<div class="set-price-radius set-price">
+											<div>圆角</div>
+											<input type="number" placeholder="0" maxlength="2">
+										</div>
+									</div>
+								</div>
+
+								<!--图片 end-->
 							</div>
 							<div class="op-box2 op-box">
 								<div class="title-box">
