修改复制、粘贴、保存、右侧属性栏

--- a/editBI.html
+++ b/editBI.html
@@ -24,7 +24,7 @@
 	    .resize-item{
 					width: 150px;
 					height:150px;
-					/*border: 1px solid red;*/
+					border: 1px solid red;
 					position: absolute;
 					z-index: 10000;
 				}
