添加传递参数

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--<link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">-->
     <link rel="stylesheet" href="plugin/zTree/css/zTreeStyle/zTreeStyle.css" />
     <link rel="stylesheet" href="plugin/basicContext/basicContext.min.css" />
-    <!--<link rel="stylesheet" href="plugin/basicContext/default.min.css" />-->
+    <link rel="stylesheet" href="plugin/basicContext/default.min.css" />
     <link rel="stylesheet" href="plugin/layer/skin/default/layer.css" />
     <link rel="stylesheet" href="css/form.css" />
     <!--[if lt IE 9]>
@@ -94,7 +94,7 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage2" src="" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
+								<iframe id="iframepage2" src="html/loglist.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
 							</div>
 						</div>
 					</div>
