--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -239,13 +239,13 @@
 								</ul>
 							</div>
 							<div class="mn-sider">
-								菜单
+								<ul id="sidebar-tree" class="ztree"></ul>
 							</div>
 							<div class="mn-htmlmain">
 								主体区域
 							</div>
 						</div>
-						<div class="m-html-mod1">
+						<!--<div class="m-html-mod1">
 							<div class="mn-header">
 								<a href="#" class="mn-logobox">
 									<img src="../images/mlogo.png" alt="" />
@@ -282,7 +282,8 @@
 							<div class="mn-htmlmain">
 								主体区域
 							</div>
-						</div>
+						</div>-->
+						
 					</div>
 				</div>
 			</div>
