--- a/html/loglist.html
+++ b/html/loglist.html
@@ -84,7 +84,7 @@
     						</tr>
     					</thead>
     					<tbody>
-    						<tr>
+    						<!--<tr>
     							<td>
     								<input type="checkbox" name="" id="" value="" />
     							</td>
@@ -94,106 +94,7 @@
     							<td>伦敦</td>
     							<td>2017.08.25 21:00</td>
     							<td>删除账号</td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>2</td>
-    							<td>腾讯科技</td>
-    							<td>liujy1226</td>
-    							<td>敦伦</td>
-    							<td>2017.08.25 21:00</td>
-    							<td>添加信息</td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>3</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>4</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>5</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>6</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>7</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>8</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>9</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    						<tr>
-    							<td>
-    								<input type="checkbox" name="" id="" value="" />
-    							</td>
-    							<td>10</td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
+    						</tr>-->
     					</tbody>
     				</table>
     			</div>
@@ -208,7 +109,7 @@
     <script src="../plugin/jQuery/jquery.min.js"></script>
     <script src="../plugin/layui-v2.1.3/layui/layui.js"></script>
     <script src="../plugin/jQuery/jQuery_ui.js"></script>
-    <script src="../js/pagination.js"></script>
+    <!--<script src="../js/pagination.js"></script>-->
     <script src="../js/loglist.js"></script>
   </body>
 </html>
