--- a/html/loglist.html
+++ b/html/loglist.html
@@ -29,19 +29,19 @@
     					<li class="func-item">
     							<label for="">用户账号：</label>
     							<div class="input-contrl">
-	    							<input type="text" placeholder="请输入用户账号"/>
+	    							<input type="text" placeholder="请输入用户账号" id="user-account"/>
 	    						</div>
     					</li>
     					<li class="func-item">
     							<label for="">操作内容：</label>
     							<div class="input-contrl">
-	    							<input type="text" placeholder="请输入操作内容"/>
+	    							<input type="text" placeholder="请输入操作内容" id="operate-txt"/>
 	    						</div>
     					</li>
     					<li class="func-item">
     							<label for="">所在菜单：</label>
     							<div class="input-contrl">
-	    							<input type="text" placeholder="请输入所在菜单"/>
+	    							<input type="text" placeholder="请输入所在菜单" id="location-menu"/>
 	    						</div>
     					</li>
     					<li class="func-item">
@@ -109,7 +109,6 @@
     <script src="../plugin/jQuery/jquery.min.js"></script>
     <script src="../plugin/layui-v2.1.3/layui/layui.js"></script>
     <script src="../plugin/jQuery/jQuery_ui.js"></script>
-    <!--<script src="../js/pagination.js"></script>-->
     <script src="../js/loglist.js"></script>
   </body>
 </html>
